--- a/src/Gallery.css
+++ b/src/Gallery.css
@@ -28,20 +28,20 @@
   .image-container.active {
     transform: scale(1.2);
     opacity: 1;
-    border: white solid 5PX;
+    border:white solid 5px
   }
   
   
   .prev-button, .next-button {
     position: absolute;
-    top: 50%;
+    top: 35%;
     transform: translateY(-50%);
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
+    background: aqua;
+    color: black;
     font-size: 24px;
-    border: none;
     padding: 10px;
     cursor: pointer;
+    border: pink solid 3px;
   }
   
   .prev-button {
