--- a/src/Header.css
+++ b/src/Header.css
@@ -10,8 +10,8 @@
     margin-bottom: 40px;
   }
   
-  .gradient-text {
-    font-size: 3rem;
+  .gradient-text-header {
+    font-size: 27px;
     font-weight: bold;
     background: linear-gradient(90deg, #ff69b4, #00ffff); /* pink to aqua */
     -webkit-background-clip: text;
